// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customers component Snapshots customers assigned 1`] = `
<div
  class="layout"
>
  <div
    class="v-card v-sheet theme--light"
    style="width: 100%;"
  >
    <div
      class="v-card__title justify-space-between px-4"
    >
      <span
        class="black--text font-weight-bold title text-uppercase"
      >
        Customer
      </span>
    </div>
     
    <hr />
     
    <div
      class="pa-4"
    >
      <div
        class="layout row"
      >
        <div
          class="flex"
        >
          <div>
            <div
              class="v-table__overflow"
            >
              <table
                class="v-datatable v-table theme--light"
              >
                <thead>
                  <tr>
                    <th
                      aria-label="CONTRACT STATUS: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      
    CONTRACT STATUS
  
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="LAST UPDATED ON: Not sorted."
                      aria-sort="none"
                      class="column text-xs-left"
                      role="columnheader"
                      scope="col"
                    >
                      
    LAST UPDATED ON
  
                    </th>
                    <th
                      aria-label="SUBMITTED ON: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      
    SUBMITTED ON
  
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="MANAGE: Not sorted."
                      aria-sort="none"
                      class="column text-xs-left"
                      role="columnheader"
                      scope="col"
                    >
                      
    MANAGE
  
                    </th>
                  </tr>
                  <tr
                    class="v-datatable__progress"
                  >
                    <th
                      class="column"
                      colspan="4"
                    />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class="py-3"
                    >
                      <div
                        class="v-menu"
                        label-prop="name"
                      >
                        <button
                          class="v-btn theme--dark grey grey-text--text"
                          type="button"
                        >
                          <div
                            class="v-btn__content"
                          >
                            
  Pending
 
                            <i
                              aria-hidden="true"
                              class="v-icon v-icon--right material-icons theme--dark"
                            >
                              arrow_drop_down
                            </i>
                          </div>
                        </button>
                        <div
                          class="v-menu__content theme--light "
                          style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                        >
                           
                          <div
                            class="v-list theme--light"
                            role="list"
                          >
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                            <div
                              role="listitem"
                            >
                              <a
                                class="v-list__tile v-list__tile--link theme--light"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  
                                </div>
                              </a>
                            </div>
                          </div>
                        </div>
                      </div>
                    </td>
                     
                    <td
                      class="py-3"
                    >
                      
      Sep 24, 2019 • 11:14 AM
    
                    </td>
                     
                    <td
                      class="text-xs-left py-3"
                    >
                      
      Sep 24, 2019 • 6:33 AM
    
                    </td>
                     
                    <td
                      class="text-xs-left py-3"
                    >
                      <button
                        class="primary ml-0 v-btn theme--light"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
        View Details
      
                        </div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Customers component Snapshots customers empty 1`] = `
<div
  class="layout"
>
  <div
    class="v-card v-sheet theme--light"
    style="width: 100%;"
  >
    <div
      class="v-card__title justify-space-between px-4"
    >
      <span
        class="black--text font-weight-bold title text-uppercase"
      >
        Customer
      </span>
    </div>
     
    <hr />
     
    <div
      class="pa-4"
    >
      <div
        class="layout row"
      >
        <div
          class="flex"
        >
          <div>
            <div
              class="v-table__overflow"
            >
              <table
                class="v-datatable v-table theme--light"
              >
                <thead>
                  <tr>
                    <th
                      aria-label="CONTRACT STATUS: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      
    CONTRACT STATUS
  
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="LAST UPDATED ON: Not sorted."
                      aria-sort="none"
                      class="column text-xs-left"
                      role="columnheader"
                      scope="col"
                    >
                      
    LAST UPDATED ON
  
                    </th>
                    <th
                      aria-label="SUBMITTED ON: Not sorted. Activate to sort ascending."
                      aria-sort="none"
                      class="column sortable text-xs-left"
                      role="columnheader"
                      scope="col"
                      tabindex="0"
                    >
                      
    SUBMITTED ON
  
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                        style="font-size: 16px;"
                      >
                        arrow_upward
                      </i>
                    </th>
                    <th
                      aria-label="MANAGE: Not sorted."
                      aria-sort="none"
                      class="column text-xs-left"
                      role="columnheader"
                      scope="col"
                    >
                      
    MANAGE
  
                    </th>
                  </tr>
                  <tr
                    class="v-datatable__progress"
                  >
                    <th
                      class="column"
                      colspan="4"
                    />
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td
                      class=""
                      colspan="4"
                    >
                      <div
                        class="v-alert error"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light v-alert__icon"
                        >
                          warning
                        </i>
                        <div>
                          
      Sorry, nothing to display here :(
    
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
